# pydantic-api-models

./: README.md  pyproject.toml
pydantic_api/base/: __init__.py  base_model.py
